force-app/main/default/objects/Training_Report__c/Training_Report__c.object-meta.xml
<CustomObject>
    <label>Training Report</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Training Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>