force-app/main/default/objects/Training_Report__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>