force-app/main/default/objects/Training_Report__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <label>Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Experienced</fullName>
            </value>
            <value>
                <fullName>Need improvement</fullName>
            </value>
            <value>
                <fullName>Well done!</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>